# runmc

./: .eslintrc  .eslintrc.js  .gitignore  LICENSE  README.md  accounts.ts  app.vue  components.d.ts  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  release.mjs  renovate.json  resources.ts  rollup.config.js  svelte.config.cjs  tsconfig.json  types.ts  vite.config.ts  windi.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
components/: Instance.vue  NavLink.vue
locales/: en.yml  it.yml
pages/: accounts.vue  index.vue  info.vue  settings.vue
pages/instances/: index.vue
pages/instances/[id]/: index.vue  install-fabric.vue
public/: index.html
src/: App.svelte  App.vue  api.ts  components.d.ts  main.css  main.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  cmd.rs  config.rs  fabric.rs  instance.rs  main.rs  util.rs  version.rs
src/components/: HelloWorld.vue  apply-button.vue  custom-button.vue  install-button.vue  instance.vue  link-button.vue  nav-link.vue  remove-button.vue  rename-button.vue  settings-button.vue  version.vue
src/layouts/: default.vue
src/lib/: Home.svelte  Versions.svelte  api.ts
src/logic/: accounts.ts  config.ts  instances.ts  launchermeta.ts  libraries.ts
src/modules/: i18n.ts
src/pages/: accounts.vue  add-account.vue  add-version.vue  index.vue  info.vue  new-instance.vue  settings.vue  versions.vue
src/pages/instances/: index.vue
src/pages/instances/[id]/: index.vue  install-fabric.vue
src/pages/versions/: [id].vue  index.vue
src/router/: index.ts
src/routes/: $layout.svelte  index.svelte  versions.svelte
src/styles/: main.css
src/views/: Home.vue  Players.vue  Versions.vue
