[package]
name = "runmc"
version = "0.0.12"
description = "A Minecraft launcher"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mq1/runmc"
default-run = "runmc"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = [ "json" ] }
tauri = { version = "1.0.0-beta.8", features = ["fs-create-dir", "fs-read-dir", "fs-read-text-file", "fs-remove-dir", "fs-rename-file", "fs-write-file", "http-request", "os-all", "path-all", "shell-open", "updater"] }

[dependencies.libmc]
git = "https://github.com/mq1/libmc.git"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
